- added sql errors handling;
