# internal/handler/auth.go
@@ -2,9 +2,11 @@ package handler
 
 import (
 	"net/http"
+	"strings"
 
 	"github.com/bruhlord-s/openboard-go/internal/model"
 	"github.com/gin-gonic/gin"
+	"github.com/lib/pq"
 )
 
 // @Summary SignUp
@@ -15,7 +17,7 @@ import (
 // @Produce json
 // @Param input body model.User true "account info"
 // @Success 200 {integer} integer 1
-// @Failure 400 {object} errorResponse
+// @Failure 422 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /auth/sign-up [post]
@@ -23,12 +25,19 @@ func (h *Handler) signUp(c *gin.Context) {
 	var input model.User
 
 	if err := c.BindJSON(&input); err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
+		newErrorResponse(c, http.StatusUnprocessableEntity, err.Error())
 		return
 	}
 
 	id, err := h.services.Authorization.CreateUser(input)
 	if err != nil {
+		if pqErr, ok := err.(*pq.Error); ok {
+			switch pqErr.Code.Name() {
+			case "unique_violation":
+				newErrorResponse(c, http.StatusUnprocessableEntity, "email or username is already taken")
+				return
+			}
+		}
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
@@ -51,19 +60,24 @@ type signInInput struct {
 // @Produce json
 // @Param input body signInInput true "credentials"
 // @Success 200 {string} string "token"
-// @Failure 400 {object} errorResponse
+// @Failure 401 {object} errorResponse
+// @Failure 422 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var input signInInput
 
 	if err := c.BindJSON(&input); err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
+		newErrorResponse(c, http.StatusUnprocessableEntity, err.Error())
 		return
 	}
 
 	token, err := h.services.Authorization.GenerateToken(input.Username, input.Password)
 	if err != nil {
+		if strings.Contains(err.Error(), "no rows in result set") {
+			newErrorResponse(c, http.StatusUnauthorized, "wrong credentials")
+			return
+		}
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 		return
 	}
